# RS1-TeamTurtleTech

./: CMakeLists.txt  README.md  package.xml  turtlebot3_turtle_tech.launch.py  turtlebot3_turtle_tech.world
Camera model sdf/: README  model.sdf
Person Detection/sprint4/: CMakeLists.txt  package.xml
Person Detection/sprint4/src/: rgbDetect.cpp
Person_Detection/: Person_Detection_Readme
Person_Detection/sprint4/: CMakeLists.txt  package.xml
Person_Detection_Blur/: Readme
Person_Detection_Blur/sprint_04/launch/: turtle_tech_launch.py
autonomous_exploration/autonomous_exploration/: control.py  turkish.py
autonomous_exploration/config/: params.yaml
circle_detection/: CMakeLists.txt  README  notes.txt
circle_detection/launch/: circle_detection_launch.py
circle_detection/src/: sprint3.cpp
global_coords_working/sprint_04/: CMakeLists.txt  package.xml
global_coords_working/sprint_04/src/: rgbDetect.cpp
turtle_tech_code/: README
turtle_tech_code/sprint_04/: CMakeLists.txt
turtle_tech_code/sprint_04/launch/: turtle_tech_launch.py
turtle_tech_code/sprint_04/src/: rgbDetect.cpp
turtle_tech_gazebo/: turtle_tech_gazebo_README
turtle_tech_gazebo/launch/: turtle_tech.launch.py
turtle_tech_gazebo/models/blue_guy/: model.sdf
turtle_tech_gazebo/models/cylinder_30cm_dia/: model.config  model.sdf
turtle_tech_gazebo/models/red_guy/: model.sdf
turtletech_world/: turtle_tech.world
turtletech_world/blue_guy/: model.config
turtletech_world/red_guy/: model.config
turtletech_world/worlds/: turtle_tech.world
(+3 files in other folders)
